[gd_scene load_steps=14 format=3 uid="uid://d0q8pw85ftlds"]

[ext_resource type="Script" path="res://Scripts/boss2.gd" id="1_koumo"]
[ext_resource type="Shader" uid="uid://cajjvk3dmacsi" path="res://themes/hit_flash.tres" id="2_roujl"]
[ext_resource type="Texture2D" uid="uid://dhgg5sqcfnkbm" path="res://Art/Portraits/cowboy.png" id="3_ifp5p"]
[ext_resource type="Script" path="res://Scenes/levels/level2/patterns/pattern5.gd" id="4_wv2ph"]
[ext_resource type="Script" path="res://Scenes/levels/level2/patterns/pattern6.gd" id="5_eumd0"]
[ext_resource type="Script" path="res://Scenes/levels/level2/patterns/pattern7.gd" id="6_mjcbs"]
[ext_resource type="Script" path="res://Scenes/levels/level2/patterns/pattern8.gd" id="7_no7se"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_km27d"]
resource_local_to_scene = true
shader = ExtResource("2_roujl")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_x8efj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5mbnn"]
radius = 39.0
height = 91.0

[sub_resource type="Animation" id="Animation_8i8kt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lq2vk"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnft2"]
_data = {
"RESET": SubResource("Animation_8i8kt"),
"hurt": SubResource("Animation_lq2vk")
}

[node name="Cowboy" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(2, 2)
script = ExtResource("1_koumo")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_km27d")
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_ifp5p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(4.5, 4.5)
shape = SubResource("CircleShape2D_x8efj")
debug_color = Color(0.729412, 0, 0.2, 0.639216)

[node name="hitboxarea" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="hitboxarea"]
position = Vector2(3.5, 7.5)
shape = SubResource("CapsuleShape2D_5mbnn")

[node name="Pattern5" type="Node2D" parent="."]
script = ExtResource("4_wv2ph")

[node name="shotTimer5" type="Timer" parent="Pattern5"]

[node name="Pattern6" type="Node2D" parent="."]
script = ExtResource("5_eumd0")

[node name="shotTimer6" type="Timer" parent="Pattern6"]

[node name="Pattern7" type="Node2D" parent="."]
script = ExtResource("6_mjcbs")

[node name="shotTimer7" type="Timer" parent="Pattern7"]

[node name="Pattern8" type="Node2D" parent="."]
script = ExtResource("7_no7se")

[node name="shotTimer8" type="Timer" parent="Pattern8"]

[node name="HitFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mnft2")
}

[connection signal="body_entered" from="hitboxarea" to="." method="_on_hitboxarea_body_entered"]
[connection signal="timeout" from="Pattern5/shotTimer5" to="Pattern5" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="Pattern6/shotTimer6" to="Pattern6" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="Pattern7/shotTimer7" to="Pattern7" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="Pattern8/shotTimer8" to="Pattern8" method="_on_shot_timer_timeout"]
